Slider wrap fixed

--- a/app/styles/blocks/promo.scss
+++ b/app/styles/blocks/promo.scss
@@ -53,21 +53,28 @@
 
   &__control-left {
 
-    left: 10px;
+    left: 0;
 
   }
 
   &__control-right {
 
-    right: 10px;
+    right: 0;
+
+  }
+
+  &__item-wrap {
+
+    padding: 0 20px;
+    float: left;
+    width: 33.333333%;
+    height: 100%;
 
   }
 
   &__item {
 
-    float: left;
-    width: 33.333333%;
-    height: 100%;
+    position: relative;
 
   }
 
